logout and update user info views

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ EMAIL_USE_TLS = True
 EMAIL_PORT = 587
 
 # Authentication settings
-# AUTH_USER_MODEL='user.user'
+# AUTH_USER_MODEL='User'
 
 # SSL settings
 SSL_CERTIFICATE = '/etc/letsencrypt/live/event-us.me/fullchain.pem'
